suppression de table.tbl useless ajout d'id dans les shape gestion des éléments de jeu dans les zones interdites test Astar

--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "gpioColorSelector": 5,
   "gpioTirette": 4,
   "matchDuration": 98,
-  "tablePath": "table.tbl",
+  "tablePath": "table.json",
   "commandFile": "configCollection.json",
   "lcd": {
           "i2cAddress" : 39,
