--- a/config.json
+++ b/config.json
@@ -1,16 +1,17 @@
 {
-  "desc" : "Configuration du robot 2020 - Digital Princess",
+  "desc" : "Configuration du robot 2021 - Digital Princess",
   "gpioColorSelector": 5,
   "gpioTirette": 4,
-  "matchDuration": 98,
+  "matchDuration": 99,
   "table0Path": "table0.tbl",
   "table3000Path": "table3000.tbl",
   "tableJsonPath": "table.json",
   "commandFile": "configCollection.json",
   "lcd": {
-          "i2cAddress" : 39,
-          "lineCount" : 2,
-          "lineLength" : 16
+    "type": "segment",
+    "i2cAddress" : 39,
+    "lineCount" : 2,
+    "lineLength" : 16
   },
 
   "asserv": {
