--- a/config_PMI.json
+++ b/config_PMI.json
@@ -1,19 +1,27 @@
 {
-  "desc" : "Configuration du robot PMI 2020",
+  "desc" : "Configuration du robot PMI 2020 - Princess Picrate",
   "gpioColorSelector": 5,
   "gpioTirette": 4,
   "matchDuration": 99,
-  "tablePath": "table.json",
+  "table0Path": "table0.tbl",
+  "table3000Path": "table3000.tbl",
+  "tableJsonPath": "table.json",
   "commandFile": "configCollection.json",
+  "lcd": {
+    "type": "full",
+    "i2cAddress" : 51,
+    "lineCount" : 2,
+    "lineLength" : 16
+  },
 
   "asserv": {
     "baud":115200,
     "serie":"/dev/serial/by-id/usb-mbed_Microcontroller_101000000000000000000002F7F2854A-if01"
   },
 
-  "action": {
+  "actions": {
     "baud":115200,
-    "serie":"/dev/ttyUSB0",
+    "serie":"/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
     "dataDir":"/home/pi/IA/actions/"
   },
 
