--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "desc" : "Configuration du robot 2021 - Digital Princess",
+  "desc": "Configuration du robot 2021 - Digital Princess",
   "gpioColorSelector": 5,
   "gpioTirette": 4,
   "matchDuration": 99,
@@ -9,44 +9,47 @@
   "commandFile": "configCollection.json",
   "lcd": {
     "type": "segment",
-    "i2cAddress" : 39,
-    "lineCount" : 2,
-    "lineLength" : 16
+    "i2cAddress": 39,
+    "lineCount": 2,
+    "lineLength": 16
   },
-
+  "loggerSocket": {
+    "active": true,
+    "host": "localhost",
+    "port": 4269,
+    "who": "princesspi"
+  },
   "asserv": {
-    "baud":115200,
-    "serie":"/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066FFF383133524157185717-if02"
+    "baud": 115200,
+    "serie": "/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066FFF383133524157185717-if02"
   },
-
   "actions": {
-    "baud":115200,
-    "serie":"/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
-    "dataDir":"/home/pi/IA/actions/"
+    "baud": 115200,
+    "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
+    "dataDir": "/home/pi/IA/actions/"
   },
-
   "detection": {
-    "ultrasound" : {
-      "type":"srf04",
-      "gpioList":[
+    "ultrasound": {
+      "type": "srf04",
+      "gpioList": [
         {
-          "desc" : "Avant gauche",
-          "in" : 22,
+          "desc": "Avant gauche",
+          "in": 22,
           "out": 21
         },
         {
-          "desc" : "Milieu",
-          "in" : 24,
+          "desc": "Milieu",
+          "in": 24,
           "out": 25
         },
         {
-          "desc" : "Avant droit",
-          "in" : 2,
+          "desc": "Avant droit",
+          "in": 2,
           "out": 0
         },
         {
-          "desc" : "Arrière",
-          "in" : 12,
+          "desc": "Arrière",
+          "in": 12,
           "out": 13
         }
       ]
