--- a/config_PMI.json
+++ b/config_PMI.json
@@ -9,19 +9,19 @@
   "commandFile": "configCollection.json",
   "lcd": {
     "type": "full",
-    "i2cAddress" : 51,
+    "i2cAddress" : 81,
     "lineCount" : 2,
     "lineLength" : 16
   },
 
   "asserv": {
     "baud":115200,
-    "serie":"/dev/serial/by-id/usb-mbed_Microcontroller_101000000000000000000002F7F2854A-if01"
+    "serie":"/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066BFF485151717867202913-if02"
   },
 
   "actions": {
     "baud":115200,
-    "serie":"/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
+    "serie":"/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0",
     "dataDir":"/home/pi/IA/actions/"
   },
 
@@ -30,26 +30,26 @@
       "type":"srf08",
       "i2cConfigList":[
         {
-          "desc" : "Avant gauche (0xE1)",
-          "address" : 113, 
-          "maxAnalogGain" : 31,
-          "range" : 13
-        },
-        {
-          "desc" : "Avant milieu (0xE2)",
-          "address" : 114,
-          "maxAnalogGain" : 31,
-          "range" : 13
-        },
-        {
-          "desc" : "Avant droit (0xE3)",
+          "desc" : "Avant gauche (0x73)",
           "address" : 115,
           "maxAnalogGain" : 31,
           "range" : 13
         },
         {
-          "desc" : "Arrière (0xE4)",
+          "desc" : "Avant milieu (0x74)",
           "address" : 116,
+          "maxAnalogGain" : 31,
+          "range" : 13
+        },
+        {
+          "desc" : "Avant droit (0x72)",
+          "address" : 114,
+          "maxAnalogGain" : 31,
+          "range" : 13
+        },
+        {
+          "desc" : "Arrière (0x71)",
+          "address" : 113,
           "maxAnalogGain" : 31,
           "range" : 13
         }
