--- a/config.json
+++ b/config.json
@@ -1,61 +1,78 @@
 {
-  "desc": "Configuration du robot 2021 - Digital Princess",
-  "gpioColorSelector": 5,
-  "gpioTirette": 4,
-  "matchDuration": 99,
-  "table0Path": "table0.tbl",
-  "table3000Path": "table3000.tbl",
-  "tableJsonPath": "table.json",
-  "commandFile": "configCollection.json",
-  "lcd": {
-    "type": "segment",
-    "i2cAddress": 39,
-    "lineCount": 2,
-    "lineLength": 16
-  },
-  "loggerSocket": {
-    "active": false,
-    "host": "localhost",
-    "port": 4269,
-    "who": "princesspi"
-  },
-  "asserv": {
-    "baud": 115200,
-    "serie": "/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066FFF383133524157185717-if02"
-  },
-  "actions": {
-    "baud": 115200,
-    "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
-    "dataDir": "/home/pi/IA/actions/"
-  },
-  "detection": {
-    "ultrasound": {
-      "type": "srf04",
-      "gpioList": [
-        {
-          "desc": "Avant gauche",
-          "in": 22,
-          "out": 21
-        },
-        {
-          "desc": "Milieu",
-          "in": 24,
-          "out": 25
-        },
-        {
-          "desc": "Avant droit",
-          "in": 2,
-          "out": 0
-        },
-        {
-          "desc": "Arrière",
-          "in": 12,
-          "out": 13
-        }
-      ]
+    "desc": "Configuration du robot 2021 - Digital Princess",
+    "gpioColorSelector": 5,
+    "gpioTirette": 4,
+    "matchDuration": 99,
+    "table0Path": "table0.tbl",
+    "table3000Path": "table3000.tbl",
+    "tableJsonPath": "table.json",
+    "commandFile": "configCollection.json",
+    "lcd": {
+        "type": "segment",
+        "i2cAddress": 39,
+        "lineCount": 2,
+        "lineLength": 16
     },
-    "lidar": {
-      "port": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0"
+    "loggerSocket": {
+        "active": false,
+        "host": "localhost",
+        "port": 4269,
+        "who": "princesspi"
+    },
+    "asserv": {
+        "baud": 115200,
+        "serie": "/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066FFF383133524157185717-if02"
+    },
+    "actions": {
+        "baud": 115200,
+        "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
+        "dataDir": "/home/pi/IA/actions/"
+    },
+    "detection": {
+        "ultrasound": {
+            "type": "srf04",
+            "windowSize": 2,
+            "gpioList": [
+                {
+                    "desc": "Avant gauche",
+                    "in": 22,
+                    "out": 21,
+                    "x": 120,
+                    "y": 105,
+                    "angle": 20,
+                    "threshold": 350
+                },
+                {
+                    "desc": "Milieu",
+                    "in": 24,
+                    "out": 25,
+                    "x": 125,
+                    "y": 0,
+                    "angle": 0,
+                    "threshold": 350
+                },
+                {
+                    "desc": "Avant droit",
+                    "in": 2,
+                    "out": 0,
+                    "x": 120,
+                    "y": -105,
+                    "angle": -20,
+                    "threshold": 350
+                },
+                {
+                    "desc": "Arrière",
+                    "in": 12,
+                    "out": 13,
+                    "x": -125,
+                    "y": 0,
+                    "angle": 180,
+                    "threshold": 200
+                }
+            ]
+        },
+        "lidar": {
+            "port": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0"
+        }
     }
-  }
 }
