--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     },
     "loggerSocket": {
         "active": false,
-        "host": "localhost",
+        "host": "192.168.0.102",
         "port": 4269,
         "who": "princesspi"
     },
