--- a/config_PMI.json
+++ b/config_PMI.json
@@ -1,7 +1,7 @@
 {
     "desc": "Configuration du robot PMI 2020 - Princess Picrate",
-    "gpioColorSelector": 5,
-    "gpioTirette": 4,
+    "gpioColorSelector": 4,
+    "gpioTirette": 5,
     "matchDuration": 99,
     "table0Path": "table0.tbl",
     "table3000Path": "table3000.tbl",
@@ -15,17 +15,59 @@
     },
     "loggerSocket": {
         "active": false,
-        "host": "localhost",
+        "host": "192.168.0.102",
         "port": 4269,
         "who": "picratepi"
     },
     "asserv": {
         "baud": 115200,
-        "serie": "/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066BFF485151717867202913-if02"
+        "serie": "/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066BFF485151717867202913-if02",
+        "calage0": {
+            "x": 680,
+            "y": 165,
+            "theta": 1.5707963267948966192313216916398
+        },
+        "calage3000": {
+            "x": 680,
+            "y": 2835,
+            "theta": -1.5707963267948966192313216916398
+        },
+        "start0": [
+            {
+                "type": "go",
+                "dist": 100
+            },
+            {
+                "type": "goto",
+                "x": 800,
+                "y": 200
+            },
+            {
+                "type": "face",
+                "x": 800,
+                "y": 3000
+            }
+        ],
+        "start3000": [
+            {
+                "type": "go",
+                "dist": 100
+            },
+            {
+                "type": "goto",
+                "x": 800,
+                "y": 2800
+            },
+            {
+                "type": "face",
+                "x": 800,
+                "y": 0
+            }
+        ]
     },
     "actions": {
         "baud": 115200,
-        "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0",
+        "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
         "dataDir": "/home/pi/IA/actions/"
     },
     "detection": {
@@ -38,8 +80,8 @@
                     "address": 115,
                     "maxAnalogGain": 31,
                     "range": 13,
-                    "x": 0,
-                    "y": 0,
+                    "x": 70,
+                    "y": 100,
                     "angle": 0,
                     "threshold": 350
                 },
@@ -48,8 +90,8 @@
                     "address": 116,
                     "maxAnalogGain": 31,
                     "range": 13,
-                    "x": 0,
-                    "y": 0,
+                    "x": 70,
+                    "y": -100,
                     "angle": 0,
                     "threshold": 350
                 },
@@ -58,7 +100,7 @@
                     "address": 114,
                     "maxAnalogGain": 31,
                     "range": 13,
-                    "x": 0,
+                    "x": 70,
                     "y": 0,
                     "angle": 0,
                     "threshold": 350
@@ -68,9 +110,9 @@
                     "address": 113,
                     "maxAnalogGain": 31,
                     "range": 13,
-                    "x": 0,
+                    "x": -70,
                     "y": 0,
-                    "angle": 0,
+                    "angle": 180,
                     "threshold": 200
                 }
             ]
