--- a/config.json
+++ b/config.json
@@ -68,7 +68,8 @@
     "actions": {
         "baud": 115200,
         "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
-        "dataDir": "/home/pi/IA/actions/"
+        "dataDir": "/home/pi/IA/actions/",
+        "init": [0]
     },
     "detection": {
         "ultrasound": {
