--- a/config_PMI.json
+++ b/config_PMI.json
@@ -6,7 +6,7 @@
     "table0Path": "table0.tbl",
     "table3000Path": "table3000.tbl",
     "tableJsonPath": "table.json",
-    "commandFile": "configCollection.json",
+    "commandFile": "configCollectionPmi.json",
     "lcd": {
         "type": "full",
         "i2cAddress": 81,
@@ -40,12 +40,12 @@
             {
                 "type": "goto",
                 "x": 1020,
-                "y": 200
+                "y": 260
             },
             {
                 "type": "face",
                 "x": 0,
-                "y": 200
+                "y": 260
             }
         ],
         "start3000": [
@@ -56,19 +56,20 @@
             {
                 "type": "goto",
                 "x": 1020,
-                "y": 2800
+                "y": 2740
             },
             {
                 "type": "face",
                 "x": 0,
-                "y": 2800
+                "y": 2740
             }
         ]
     },
     "actions": {
         "baud": 115200,
         "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
-        "dataDir": "/home/pi/IA/actions/"
+        "dataDir": "/home/pi/IA/actions/",
+        "init": [13, 14]
     },
     "detection": {
         "ultrasound": {
