--- a/config.json
+++ b/config.json
@@ -69,7 +69,7 @@
         "baud": 115200,
         "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
         "dataDir": "/home/pi/IA/actions/",
-        "init": [0]
+        "init": [0, 3, 4]
     },
     "detection": {
         "ultrasound": {
