--- a/build.gradle
+++ b/build.gradle
@@ -105,4 +105,6 @@ dependencies {
     // https://mvnrepository.com/artifact/com.kitfox.svg/svg-salamander
     compile group: 'com.kitfox.svg', name: 'svg-salamander', version: '1.0'
 
+    // Lib de WebSocket
+    compile "org.java-websocket:Java-WebSocket:1.5.1"
 }
