--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
         "lineLength": 16
     },
     "loggerSocket": {
-        "active": false,
+        "active": true,
         "host": "192.168.0.102",
         "port": 4269,
         "who": "princesspi"
