--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     },
     "loggerSocket": {
         "active": true,
-        "host": "localhost",
+        "host": "192.168.0.102",
         "port": 4269,
         "logPort": 1664,
         "who": "princesspi"
@@ -70,7 +70,11 @@
         "baud": 115200,
         "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
         "dataDir": "/home/pi/IA/actions/",
-        "init": [0, 3, 4]
+        "init": [0, 3, 4],
+        "funnyAction": {
+            "actionId": 12,
+            "score": 10
+        }
     },
     "detection": {
         "ultrasound": {
