--- a/config.json
+++ b/config.json
@@ -15,7 +15,7 @@
     },
     "loggerSocket": {
         "active": true,
-        "host": "gag-laptop",
+        "host": "192.168.0.100",
         "port": 4269,
         "logPort": 1664,
         "who": "princesspi"
