--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
         "lineLength": 16
     },
     "loggerSocket": {
-        "active": true,
+        "active": false,
         "host": "192.168.0.104",
         "port": 4269,
         "logPort": 1664,
@@ -70,7 +70,7 @@
         "baud": 115200,
         "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
         "dataDir": "/home/pi/IA/actions/",
-        "init": [0, 3, 4],
+        "init": [0],
         "funnyAction": {
             "actionId": 12,
             "score": 10
