--- a/config/2022/config_PMI.json
+++ b/config/2022/config_PMI.json
@@ -1,7 +1,7 @@
 {
     "desc": "Configuration du robot PMI 2022 - Pass-Pass Princess",
-    "gpioColorSelector": 4,
-    "gpioTirette": 5,
+    "gpioColorSelector": 5,
+    "gpioTirette": 4,
     "matchDuration": 100,
     "table0Path": "table0.tbl",
     "table3000Path": "table3000.tbl",
@@ -23,7 +23,7 @@
     "asserv": {
         "baud": 115200,
         "combineRxTx": false,
-        "serie": "/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066BFF485151717867202913-if02",
+        "serie": "/dev/serial/by-id/usb-STMicroelectronics_STM32_STLink_066AFF575755846687215414-if02",
         "calage0": {
             "x": 1150,
             "y": 115,
@@ -79,9 +79,13 @@
     },
     "actions": {
         "baud": 115200,
-        "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
+        "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_00000000-if00-port0",
+        "qik": {
+            "serie": "/dev/serial/by-id/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0",
+            "baud": 115200
+        },
         "dataDir": "/home/pi/IA/actions/",
-        "init": [13, 14],
+        "init": [1],
         "funnyAction": {
             "actionId": -1,
             "score": 0
@@ -93,8 +97,8 @@
             "windowSize": 2,
             "i2cConfigList": [
                 {
-                    "desc": "Avant gauche (0x73)",
-                    "address": 115,
+                    "desc": "Avant gauche (0x70)",
+                    "address": 112,
                     "maxAnalogGain": 31,
                     "range": 13,
                     "x": 70,
@@ -103,7 +107,7 @@
                     "threshold": 350
                 },
                 {
-                    "desc": "Avant milieu (0x74) pas vrai",
+                    "desc": "Avant milieu (0x74)",
                     "address": 116,
                     "maxAnalogGain": 31,
                     "range": 13,
@@ -113,8 +117,8 @@
                     "threshold": 350
                 },
                 {
-                    "desc": "Avant droit (0x72) pas vrai",
-                    "address": 116,
+                    "desc": "Avant droit (0x73) KO ?????",
+                    "address": 115,
                     "maxAnalogGain": 31,
                     "range": 13,
                     "x": 70,
