--- a/config/2022/config.json
+++ b/config/2022/config.json
@@ -68,7 +68,7 @@
     },
     "actions": {
         "baud": 115200,
-        "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.3:1.0-port0",
+        "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0",
         "dataDir": "/home/pi/IA/actions/",
         "init": [0],
         "funnyAction": {
@@ -120,7 +120,7 @@
             ]
         },
         "lidar": {
-            "port": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0"
+            "port": "/dev/serial/by-path/usb-FTDI_FT232R_USB_UART_A5XK3RJT-if00-port0"
         }
     }
 }
