--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ task deployBigPrincess {
                 put from: 'config/2022/table0.tbl', into: 'IA'
                 put from: 'config/2022/table3000.tbl', into: 'IA'
                 put from: 'src/main/java/actions/a2022/actions/', into: 'IA'
+                execute 'sudo rm -rf IA/webRootDir/*'
                 execute 'sudo sync'
             }
         }
@@ -71,6 +72,7 @@ task deploySmallPrincess {
                 put from: 'config/2022/table0.tbl', into: 'IA'
                 put from: 'config/2022/table3000.tbl', into: 'IA'
                 put from: 'src/main/java/actions/a2022/actions/', into: 'IA'
+                execute 'sudo rm -rf IA/webRootDir/*'
                 execute 'sudo sync'
             }
         }
