--- a/config/2022/config.json
+++ b/config/2022/config.json
@@ -68,7 +68,7 @@
     },
     "actions": {
         "ax12": {
-            "serial": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0",
+            "serie": "/dev/serial/by-path/platform-3f980000.usb-usb-0:1.1.2:1.0-port0",
             "baud": 115200
         },
         "serial": {
